--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "sweetalert2": "^11.1.7"
+        "sweetalert2": "^11.1.7",
+        "turbolinks": "^5.2.0"
     }
 }
