--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "tailwindcss": "^2.2.2"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.5.0",
         "sweetalert2": "^11.1.7",
         "turbolinks": "^5.2.0"
     }
