--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,33 @@
     "license": "MIT",
     "require": {
         "php": "^7.4p|^8.0",
-        "blade-ui-kit/blade-ui-kit": "^0.2.0",
-        "cviebrock/eloquent-sluggable": "^8.0",
-        "fideloper/proxy": "^4.4",
+        "artesaos/seotools": "^0.22.0",
+        "blade-ui-kit/blade-ui-kit": "^0.3.4",
+        "consoletvs/charts": "6.*",
+        "cviebrock/eloquent-sluggable": "^9.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kavenegar/php": "^1.2",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.4",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
         "morilog/jalali": "3.*",
+        "pharaonic/livewire-select2": "^1.0",
         "shetabit/multipay": "^1.9",
+        "spatie/laravel-sitemap": "^6.0",
         "stevebauman/location": "^6.2",
-        "unisharp/laravel-filemanager": "^2.2",
-        "uxweb/sweet-alert": "^2.0",
-        "wulfheart/pretty_routes": "^0.3.0"
+        "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
