Integrate SMS, Location, and Payment Gateway Configurations
- Add environment variables for Kavenegar API integration to enable SMS functionalities.
- Introduce a flag for location testing to facilitate location-based features during development.
- Implement configurable payment methods with initial support for Zarinpal and Payping, including merchant IDs for each gateway.
- Specify a callback URL for payment gateway responses to ensure proper handling of payment confirmations.

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,15 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+KAVENEGAR_CLIENT_API=""
+SENDER_MOBILE=""
+LOCATION_TESTING= true
+To_MOBILE=
+
+PAYMENT_METHOD=zarinpal
+#PAYMENT_METHOD=payping
+
+CALLBACK_URL=http://127.0.0.1:8000/payment/bank/callback
+MERCHECNT_ID_ZARRINPAL=""
+MERCHECNT_ID_PAYPING=""
