--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "blade-ui-kit/blade-ui-kit": "^0.3.4",
         "consoletvs/charts": "6.*",
         "cviebrock/eloquent-sluggable": "^9.0",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kavenegar/php": "^1.2",
         "laravel/framework": "^9.0",
